[gd_scene load_steps=6 format=3 uid="uid://c4icgmo4tjv4f"]

[ext_resource type="Script" path="res://Scripts/Game.gd" id="1_v8xjo"]
[ext_resource type="PackedScene" uid="uid://d1qjhrxohaaf3" path="res://Scenes/ArrowOverlay.tscn" id="2_h6igi"]
[ext_resource type="PackedScene" uid="uid://cse5xue0etpn7" path="res://Scenes/Conductor.tscn" id="3_0ohds"]
[ext_resource type="Script" path="res://Scenes/area_2d.gd" id="5_iol7e"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qiesq"]
size = Vector2(1011, 717)

[node name="Game" type="Node2D"]
script = ExtResource("1_v8xjo")

[node name="ArrowOverlays" type="Node" parent="."]

[node name="ArrowOverlay" parent="ArrowOverlays" instance=ExtResource("2_h6igi")]

[node name="ArrowOverlay2" parent="ArrowOverlays" instance=ExtResource("2_h6igi")]

[node name="ArrowOverlay3" parent="ArrowOverlays" instance=ExtResource("2_h6igi")]

[node name="ArrowOverlay4" parent="ArrowOverlays" instance=ExtResource("2_h6igi")]

[node name="Conductor" parent="." instance=ExtResource("3_0ohds")]

[node name="Score" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0

[node name="Combo" type="Label" parent="."]
offset_left = 20.0
offset_top = 1035.0
offset_right = 60.0
offset_bottom = 1058.0

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(-14, -22)
script = ExtResource("5_iol7e")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(924, 419.5)
shape = SubResource("RectangleShape2D_qiesq")

[connection signal="beatSignal" from="Conductor" to="." method="_on_conductor_beat_signal"]
[connection signal="measureSignal" from="Conductor" to="." method="_on_conductor_measure_signal"]
[connection signal="area_entered" from="Area2D" to="Area2D" method="_on_area_entered"]
